Bug 262483 - Power management can't find power profile
Summary: Power management can't find power profile
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: powermanagement (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Dario Freddi
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-08 02:41 UTC by Garth Johnson
Modified: 2012-04-05 21:01 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
kscreensaverrc (48 bytes, application/octet-stream)
2011-02-23 17:45 UTC, lcn.mustard
Details
powerdevil2profilesrc (245 bytes, application/octet-stream)
2011-02-23 17:48 UTC, lcn.mustard
Details
powerdevilrc (68 bytes, application/octet-stream)
2011-02-23 17:49 UTC, lcn.mustard
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Garth Johnson 2011-01-08 02:41:39 UTC
Version:           unspecified (using KDE 4.5.95) 
OS:                Linux

Upon login, I get a message that says "Power profile "Performance" selected but it does not exist."

Thus, my screen turns off after 10 minutes, even when playing movies.

I've tried creating and using a new power profile, and get the same error. 

The behavior exists under a new user account as well.

Reproducible: Always

Steps to Reproduce:
login

Actual Results:  
No power profile found.

Expected Results:  
Power profile found and settings respected.
Comment 1 Sebastian 2011-01-08 13:55:05 UTC
I can confirm this. I'm observing exactly the same behaviour since updating from RC1 to KDE 4.6 RC2.
Comment 2 Dario Freddi 2011-01-15 20:44:57 UTC
Can you please post your kded4 output? If you are upgrading from an unreleased version (like from RC1) you might want to delete your .kde/share/config/powerdevil2profilesrc and test again.
Comment 3 Garth Johnson 2011-01-15 21:32:29 UTC
(In reply to comment #2)
> Can you please post your kded4 output? If you are upgrading from an unreleased
> version (like from RC1) you might want to delete your
> .kde/share/config/powerdevil2profilesrc and test again.


Forgive me, but how do I post that output?

Also, I have already completely deleted my .kde folder and retested with the same results.
Comment 4 Dario Freddi 2011-01-15 21:51:48 UTC
I think it should be in your .xsession-errors file, otherwise you can do in a terminal:

killall kded4
kded4 > log.txt
Comment 5 Garth Johnson 2011-01-15 22:03:12 UTC

log,txt was empty, but here is what I got in the terminal...


QDBusObjectPath: invalid path ""
Fetched layout groups from X server:    layouts: ("us")         variants: ("") 

Connecting to deprecated signal QDBusConnectionInterface::serviceOwnerChanged(QString,QString,QString)
garth@GarthandBrook:~$ No outputs have backlight property
kded(10495)/kdecore (KConfigSkeleton) KCoreConfigSkeleton::writeConfig:
QDBusConnection: name 'org.kde.powerdevil.backlighthelper' had owner '' but we thought it was ':1.154'
kded(10495) PowerDevilUPowerBackend::brightness: org.kde.powerdevil.backlighthelper.brightness failed 
Object::connect: No such signal QDBusAbstractInterface::Changed()
Invalid D-BUS member name 'idle-hint' found in interface 'org.freedesktop.ConsoleKit.Session' while parsing introspection
Invalid D-BUS member name 'is-local' found in interface 'org.freedesktop.ConsoleKit.Session' while parsing introspection
Invalid D-BUS member name 'x11-display-device' found in interface 'org.freedesktop.ConsoleKit.Session' while parsing introspection
Invalid D-BUS member name 'x11-display' found in interface 'org.freedesktop.ConsoleKit.Session' while parsing introspection
Invalid D-BUS member name 'display-device' found in interface 'org.freedesktop.ConsoleKit.Session' while parsing introspection
Invalid D-BUS member name 'remote-host-name' found in interface 'org.freedesktop.ConsoleKit.Session' while parsing introspection
Invalid D-BUS member name 'session-type' found in interface 'org.freedesktop.ConsoleKit.Session' while parsing introspection
Invalid D-BUS member name 'unix-user' found in interface 'org.freedesktop.ConsoleKit.Session' while parsing introspection
kded(10495)/kmix sink_input_cb: Ignoring sink-input due to it being designated as an event and thus handled by the Event slider
Comment 6 mail 2011-01-16 15:34:26 UTC
I can confirm this behavior.
Since RC2 my screen blanks out every 10 minutes.

Deleting .kde/share/config/powerdevil2profilesrc did not help.

I can observe this issue on two different machines, one desktop computer and my notebook, both running Kubuntu 10.10 with KDE 4.6 RC2.
Comment 7 Dario Freddi 2011-01-16 17:54:15 UTC
Ok, then repeat the procedure but enable kdebug output first. to do that, start "kdebugdialog" and select all occurrences. This way, your terminal should give a more useful output.
Comment 8 mail 2011-01-16 18:15:28 UTC
kded4 writes to console if you just type "kded4 > log.txt"

I had to use " kded4 > out.txt 2>&1"

This is what I got (note that I used grep):

grep "ower.*evil" out.txt
kded(4528) KDEDModule::setModuleName: registerObject() successful for  "powerdevil"
kded(4528)/kded4 Kded::loadModule: Successfully loaded module "powerdevil"
kded(4528) PowerDevil::BackendLoader::loadBackend: Loading UPower backend...
kded(4528) PowerDevil::BackendLoader::loadBackend: Success!
kded(4528) KDEDPowerDevil::init: Backend loaded, loading core
kded(4528) PowerDevil::Core::loadCore: Core loaded, initializing backend
QDBusConnection: name 'org.kde.powerdevil.backlighthelper' had owner '' but we thought it was ':1.56'
kded(4528) PowerDevilUPowerBackend::brightness: org.kde.powerdevil.backlighthelper.brightness failed 
kded(4528) PowerDevilUPowerBackend::brightness: Screen brightness:  0
kded(4528) PowerDevilUPowerBackend::init: current screen brightness:  0
kded(4528) PowerDevilUPowerBackend::init: Can suspend
kded(4528) PowerDevilUPowerBackend::init: Can hibernate
kded(4528) PowerDevil::Core::onBackendReady: Backend is ready, KDE Power Management system initialized
kded(4528) KDEDPowerDevil::onCoreReady: Core is ready, registering various services on the bus...
kded(4528) PowerDevil::Core::reloadProfile: No batteries found, loading AC
kded(4528) PowerDevil::BundledActions::DimDisplay::loadAction:
kded(4528) PowerDevil::BundledActions::DimDisplay::loadAction: Loading timeouts with  1800000
kded(4528) PowerDevil::ActionPool::loadAction: Got a valid offer for  "DPMSControl"

Is that useful?
Comment 9 Dario Freddi 2011-01-16 18:24:06 UTC
Are you actually experiencing the issue described in this bug? It doesn't look like that from kded4 output
Comment 10 mail 2011-01-16 18:33:51 UTC
Yes I am. 

Like I wrote: Screen turns black every 10 minutes although I deactivated all Options for the only profile which is called "Leistung" (=Performance in german).

When configuring PowerDevil and when I login I get the german Message for "Power profile "Performance" selected but
it does not exist."
Comment 11 Dario Freddi 2011-01-16 18:43:11 UTC
Ok, a very important detail: the word "Performance" is in German or English?
Comment 12 mail 2011-01-16 18:46:18 UTC
It is in english.
Comment 13 Sebastian 2011-01-16 18:51:39 UTC
Just two add my 2 cents: I use an english version and here the error message states 'The profile "Performance" could not be found...'. However, this profile exists. If I add another profile with a different name and try to select that the error message changes accordingly.
Comment 14 Dario Freddi 2011-01-16 18:58:12 UTC
@Sebastian: could you please attach your .kde/share/config/powerdevilprofilesrc file?
Comment 15 Sebastian 2011-01-16 19:06:29 UTC
Interesting, I had a look at the file you requested and "powerdevilprofilesrc" does not reflect the settings I made in the powerdevil dialog, but there is another file named "powerdevil2profilesrc" which does.

Do you want to see that file or could that be the root of the problem?
Comment 16 Dario Freddi 2011-01-16 19:07:24 UTC
Thanks - in this case, it would be very helpful if you could attach your powerdevil2profilesrc too.

@Sebastian: it is powerdevil2profilesrc and not powerdevilprofilesrc, sorry.
Comment 17 Dario Freddi 2011-01-16 19:12:54 UTC
Nono - it is supposed to be this way. powerdevilprofilesrc is used in KDE<=4.5 and to migrate old profiles, whereas powerdevil2profilesrc is used in KDE>=4.6 and is what is interesting in this case.
Comment 18 mail 2011-01-16 19:24:52 UTC
FYI: this is my powerdevil2profilesrc:

[Performance]
icon=preferences-system-performance

[test]
icon=
name=test


If I choose the profile "test" the error message is displayed too.
Comment 19 Dario Freddi 2011-01-16 19:30:31 UTC
I definitely need more info then. I will prepare a patch containing a set of debug messages to be applied to the code, so that the output of kded4 this time would be useful. I'll post it here when I'm done so you can apply it and re-attach the output of kded4 which would hopefully explain where the problem lies.
Comment 20 Sebastian 2011-01-16 20:00:43 UTC
My powerdevil2profilesrc looked the same until I removed it (and powerdevilprofilesrc as well) and restarted kded4.
Now it contains a lot more entries and it kind of works.
I can select the predefined profiles without an error, but the problem persist
for any other profile I add manually.

However, if I make a change to the new profile (i.e. enabling the "Dim Display" option), the new profile works as well.

But there's a new problem: Changing settings in the predefined profiles does not work as expected. Enabling an option is stored as expected, but if I disable it, the change seems
to be ignored, i.e. if I apply the change, switch to another profile and back
again the option is still selected. If I close the settings dialog and reopen
it, the option is disabled. This does not happen with new profiles.
Comment 21 Sebastian 2011-01-16 20:10:58 UTC
Ah well, spoken too soon. I can select the profile without an error but its settings are ignored, my monitor still goes dark after 60 seconds :((
Comment 22 Dario Freddi 2011-01-16 20:19:36 UTC
The screen turn off problem is not related to this change, your system works as expected. That particular bug was fixed yesterday in bug 262486
Comment 23 Sebastian 2011-01-16 20:46:58 UTC
Ah, thx for mentioning this. Disabling dim completely seems to be working.
However, I noticed something else: the original error reappears (also with predefined profiles) if none of the options in a profile is selected. With at least one option selected it's gone again.
Comment 24 mail 2011-01-16 21:53:20 UTC
I confirm the behaviour described by Sebastian:

If one option is selected the "Power profile "Performance" selected but
it does not exist."-Message does not appear.

The config then looks as follows:


[Performance]
icon=preferences-system-performance

[Performance][HandleButtonEvents]
lidAction=0
powerButtonAction=0

[test]
icon=
name=test
Comment 25 Jamie 2011-01-17 00:24:59 UTC
Same problem here under Kubuntu 10.10 on my laptop. I'm missing all of my power profiles. The problem for me is that the system now goes into what I assume is sleep mode and the screen will not come back on when I wake it. I have to kill the power and reboot which, combined with the Ext4 filesystem, results in missing inodes after every reboot. This is making me really uncomfortable about the possibility of lost data.
Comment 26 Dario Freddi 2011-01-17 00:33:13 UTC
@Flope, Sebastian: Thanks for the detailed info, I will take action on that immediately.

@Jamie: The fact your PC is not waking up from sleep is not really dependent on KDE, as it's part of the upower+kernel infrastructure. Can you please expand on "I miss all of my power profiles"?
Comment 27 Jamie 2011-01-17 00:42:18 UTC
After upgrading to KDE 4.6, my laptop starting shutting down sometime after closing the lid and leaving it alone for a few hours. My power settings have been to never allow it to sleep/hibernate because it doesn't wake back up. Once I noticed this was happening, I went into my power settings to set them back to profiles I had used before the upgrade.

The Power Profiles are missing. The "Configure Power Management Profiles" box is completely empty. Clicking "Restore Default Profiles" does nothing and I cannot create new profiles. Any settings I make for display brightness, dim display, etc. are reset back to the defaults as soon as I close the configuration settings (probably because there is no profile to save it to). 

My laptop is now running under whatever power saving defaults exist with no regard to my previous settings or attempts to change them.
Comment 28 Dario Freddi 2011-01-17 00:54:33 UTC
SVN commit 1214941 by dafre:

BUG: 262483

Differently from the previous version, now power profiles can be valid even if they have no groups in them: change the code
to reflect this change.

 M  +1 -1      powerdevilcore.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1214941
Comment 29 Dario Freddi 2011-01-17 00:54:34 UTC
SVN commit 1214942 by dafre:

CCBUG: 262483

When saving profiles, reload the global config right after to make sure changes are picked up.

 M  +4 -1      EditPage.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1214942
Comment 30 Dario Freddi 2011-01-17 00:58:47 UTC
Can you please check if you have a file named .kde4/share/config/powerdevil2profilesrc, and post its contents if you do?

P.S.: It would be better to move this discussion to a separate bug, as apparently it has nothing to do with this one
Comment 31 Jamie 2011-01-17 01:12:56 UTC
Here's the contents of the powerdevil2profilesrc:

[Aggressive Powersave][BrightnessControl]
value=38

[Aggressive Powersave][DPMSControl]
idleTime=1200000

[Aggressive Powersave][DimDisplay]
idleTime=300000

[Aggressive Powersave][SuspendSession]
idleTime=600000
suspendType=1

[BrightnessControl]
value=100

[Performance][BrightnessControl]
value=100

[Performance][DPMSControl]
idleTime=3600000

[Performance][SuspendSession]
idleTime=5940000
suspendType=1

[Powersave][BrightnessControl]
value=62

[Powersave][DPMSControl]
idleTime=2400000

[Powersave][DimDisplay]
idleTime=600000

[Powersave][SuspendSession]
idleTime=900000
suspendType=1

[Xtreme Powersave][BrightnessControl]
value=13

[Xtreme Powersave][DPMSControl]
idleTime=900000

[Xtreme Powersave][DimDisplay]
idleTime=60000

[Xtreme Powersave][SuspendSession]
idleTime=300000
suspendType=1
Comment 32 Dario Freddi 2011-01-17 01:19:05 UTC
Everything seems to be ok. I need your kded4 output then (have a look at the posts above on how to do it)
Comment 33 Jamie 2011-01-17 01:32:02 UTC
I ran grep on the output per the post above. Let me know if you need more:

kded(3195) KDEDModule::setModuleName: registerObject() successful for  "powerdevil"
kded(3195)/kded4 Kded::loadModule: Successfully loaded module "powerdevil"
kded(3195) PowerDevil::BackendLoader::loadBackend: Loading UPower backend...
kded(3195) PowerDevil::BackendLoader::loadBackend: Success!
kded(3195) KDEDPowerDevil::init: Backend loaded, loading core
kded(3195) PowerDevil::Core::loadCore: Core loaded, initializing backend
kded(3195) PowerDevilUPowerBackend::brightness: org.kde.powerdevil.backlighthelper.brightness failed 
kded(3195) PowerDevilUPowerBackend::brightness: Screen brightness:  0
kded(3195) PowerDevilUPowerBackend::init: current screen brightness:  0
kded(3195) PowerDevilUPowerBackend::init: Can suspend
kded(3195) PowerDevilUPowerBackend::init: Can hibernate
kded(3195) PowerDevil::Core::onBackendReady: Backend is ready, KDE Power Management system initialized
kded(3195) PowerDevil::Core::onDeviceAdded: A new battery was detected
kded(3195) KDEDPowerDevil::onCoreReady: Core is ready, registering various services on the bus...
kded(3195) PowerDevil::Core::reloadProfile: Loading profile for plugged AC
kded(3195) PowerDevil::ActionPool::loadAction: Got a valid offer for  "DPMSControl"
kded(3195) PowerDevilUPowerBackend::setBrightness: set screen brightness:  100
kded(3195) PowerDevilUPowerBackend::setBrightness: org.kde.powerdevil.backlighthelper.setbrightness failed
Comment 34 Dario Freddi 2011-01-17 01:40:22 UTC
Everything appears to be running correctly. Do you get any kind of messages on starting kded4 like the one mentioned above ("Can't find Performance profile")? If the configuration window for power profiles does not show anything, could you please attach the terminal output of "kcmshell4 powerdevilprofilesconfig"?
Comment 35 Jamie 2011-01-17 14:48:48 UTC
@Dario: Okay, you just stumbled on something interesting. When I bring up power management via System Settings, I see no profiles. However, if I bring up power management using 'kcmshell4 powerdevilprofilesconfig,' I see all of the profiles and my settings appear to be kept after I close and reopen the power management settings.

I'm going to keep an eye on it and see if it continues to ignore my powersave settings and go into sleep mode.
Comment 36 Dario Freddi 2011-01-17 14:57:25 UTC
Jamie: By chance, are the two interfaces which are brought up different UI-wise? I have the feeling that you have 4.5 and 4.6 installed side-by-side, and systemsettings is picking up the wrong module.
Comment 37 Jamie 2011-01-17 17:03:43 UTC
Dario: They don't appear to be different.
Comment 38 GODLiKE 2011-01-19 04:30:01 UTC
*** This bug has been confirmed by popular vote. ***
Comment 39 S. Burmeister 2011-01-27 12:12:53 UTC
Please re-open as this is not fixed in KDE SC 4.6.0 final.
Comment 40 Garth Johnson 2011-01-27 18:30:32 UTC
I'm still having the issues after a fresh install of 4.6 final, also.
Comment 41 mail 2011-01-27 19:25:27 UTC
I can confirm.

No error messages when configuring, but screen goes blank after 10 minutes or so, even if it is not configured.
Comment 42 Dario Freddi 2011-01-29 14:11:50 UTC
I am not reopening this bug as it got extremely cluttered with unrelevant info, to the point that I do not even understand if you guys are experiencing the same problem :) I guess most of you are experiencing bug 262349, otherwise, please feel free to open a different bug.

Thanks for your understanding.
Comment 43 Dario Freddi 2011-01-29 14:15:53 UTC
Argh, of course I meant bug 264730, not 262349
Comment 44 lcn.mustard 2011-02-23 02:04:55 UTC
I have the same problem. Just upgraded to kde4.6 and my Power management can't find power profile or save new settings.
Platform Version 4.6.00 (4.6.0)
~$ kded4 > log.txt
KDE Daemon (kded) already running.
log.txt is blank
Mys powerdevil2profilesrc:
[Luciana]
icon=
name=Luciana

[Performance]
icon=preferences-system-performance

[test]
icon=
name=test
Comment 45 lcn.mustard 2011-02-23 17:45:55 UTC
Created attachment 57473 [details]
kscreensaverrc
Comment 46 lcn.mustard 2011-02-23 17:48:53 UTC
Created attachment 57474 [details]
powerdevil2profilesrc
Comment 47 lcn.mustard 2011-02-23 17:49:36 UTC
Created attachment 57475 [details]
powerdevilrc
Comment 48 lcn.mustard 2011-02-23 17:55:37 UTC
I do not believe this was fixed problem. I install it kde 4.6 final  and then the trouble started. With the bum I enable acpi and acpi-suport and disabled DPMS in xorg. Nothing works. The monitor turns off after 10 minutes.
If any knows how to solve please tell because I'm about to format the HD to remove kde4.6.
Comment 49 Dario Freddi 2011-02-23 18:03:11 UTC
Please, read the comments before cluttering the bug. Quoting myself:

"I am not reopening this bug as it got extremely cluttered with unrelevant info,
to the point that I do not even understand if you guys are experiencing the
same problem :) I guess most of you are experiencing bug 264730, otherwise,
please feel free to open a different bug."

This bug, which you are probably experiencing, has been fixed in 4.6.1.
Comment 50 cognus_amaurosis 2012-04-05 21:01:16 UTC
Same thing still going on.  No need to open a new bug here.  This happens in KDE ~and~ Gnome.  To fix it, turn off the Power Management service.  In KDE:

System Settings -> Startup and Shutdown
On the left, select Service Manager.
On the right lower you should see a list of Startup Services.
Uncheck the box next to Power Management.  Also click the Stop button (bottom right).  
Click apply and close.

Having finally figured out ~where~ the problem is, maybe someone who knows more about Linux has an idea who to tell?