BUG: 262483

Differently from the previous version, now power profiles can be valid even if they have no groups in them: change the code
to reflect this change.

svn path=/trunk/KDE/kdebase/workspace/; revision=1214941